@@ -1,3 +1,9 @@
+2002-11-13  Wakaba <w@suika.fam.cx>
+
+	* Util.pm (%FMT2STR, sprintxf): Aliasnized.
+	(Moved to new module Message::Util::Formatter.)
+	* Util/: New directory.
+
 2002-08-05  Wakaba <w@suika.fam.cx>
 
 	* Util.pm:
